--- a/gym-typescript/package.json
+++ b/gym-typescript/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://destinyamba.github.io/gym-website/gym-typescript",
   "name": "gym-typescript",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -12,6 +15,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "framer-motion": "^10.16.4",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
